apps/staging/node-red-oidc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: node-red-oidc
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      serviceAccountName: nodered
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: node-red
        image: mthorley/node-red:70c3567104b5fd73cde156249157f4f848bbe0ab
        imagePullPolicy: Always
        ports:
        - containerPort: 1880
          name: node-red-ui
        securityContext:
          privileged: true
        volumeMounts:
        - name: node-red-data
          mountPath: /data
      volumes:
      - name: node-red-data
        persistentVolumeClaim:
          claimName: node-red-claim
