apps/staging/node-red-oidc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered-internal
  namespace: node-red-oidc
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: node-red-ui
