apps/staging/node-red-oidc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nodered
  namespace: node-red-oidc
spec:
  tls:
  - hosts:
    - noderedoidc.internal.com
    secretName: internal-com-tls
  rules:
  - host: noderedoidc.internal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodered-internal
            port:
              number: 80
  ingressClassName: nginx
